#20 - Update rest api to search by CID and synonym
